实证检验结果

--- a/notebooks/IS-FinMarket.ipynb
+++ b/notebooks/IS-FinMarket.ipynb
@@ -1398,7 +1398,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 207,
+   "execution_count": 218,
    "outputs": [
     {
      "name": "stdout",
@@ -1421,11 +1421,14 @@
       "\n",
       ". ge lnclose=ln(close)\n",
       "\n",
+      ". ge lnSENT_INDEX_R_MA5=ln(SENT_INDEX_R_MA5)\n",
+      "(10,074 missing values generated)\n",
+      "\n",
       ". \n",
       ". //\n",
       ". est clear\n",
       "\n",
-      ". by id,sort:eststo: qui reg lnclose L(1/5).SENT_INDEX_R_MA5 i.trade_year,r\n",
+      ". by id,sort:eststo: qui reg pct_chg L(1/5).SENT_INDEX_R i.trade_year,r\n",
       "\n",
       "-------------------------------------------------------------------------------\n",
       "-> 000001.SH\n",
@@ -1451,31 +1454,38 @@
       "-> 399300.SZ\n",
       "(est6 stored)\n",
       "\n",
-      ". esttab ,keep(L*.SENT_INDEX_*) ///\n",
+      ". esttab,keep(L*.SENT_INDEX_*)  stats(N r2_a) ///\n",
       "> not unstack compress nogaps noobs\n",
       "\n",
       "-------------------------------------------------------------------------------\n",
       "> ---------\n",
       "                 (1)          (2)          (3)          (4)          (5)       \n",
       ">    (6)   \n",
-      "             lnclose      lnclose      lnclose      lnclose      lnclose      l\n",
-      "> nclose   \n",
+      "             pct_chg      pct_chg      pct_chg      pct_chg      pct_chg      p\n",
+      "> ct_chg   \n",
       "-------------------------------------------------------------------------------\n",
       "> ---------\n",
-      "L.SENT_I~5    0.0475***    0.0524***    0.0581***    0.0575***    0.0670***    \n",
-      "> 0.0581***\n",
-      "L2.SENT_~5  -0.00287     -0.00377     -0.00299     -0.00235     -0.00224     -0\n",
-      "> .00299   \n",
-      "L3.SENT_~5   -0.0115      -0.0148      -0.0146      -0.0127      -0.0153      -\n",
-      "> 0.0146   \n",
-      "L4.SENT_~5  -0.00231     0.000345     -0.00148     -0.00593     -0.00334     -0\n",
-      "> .00148   \n",
-      "L5.SENT_~5    0.0506***    0.0573***    0.0648***    0.0629***    0.0733***    \n",
-      "> 0.0648***\n",
+      "L.SENT_I~R    0.0336       0.0182       0.0259       0.0339       0.0268       \n",
+      "> 0.0259   \n",
+      "L2.SENT_~R    0.0109       0.0194       0.0237      0.00299       0.0248       \n",
+      "> 0.0237   \n",
+      "L3.SENT_~R    0.0126     -0.00254       0.0147       0.0251       0.0230       \n",
+      "> 0.0147   \n",
+      "L4.SENT_~R   -0.0161       0.0122     -0.00706      -0.0423      -0.0183     -0\n",
+      "> .00706   \n",
+      "L5.SENT_~R   -0.0209      -0.0592      -0.0374       0.0324      -0.0349      -\n",
+      "> 0.0374   \n",
+      "-------------------------------------------------------------------------------\n",
+      "> ---------\n",
+      "N               2907         2907         2907         2907         2907       \n",
+      ">   2907   \n",
+      "r2_a       -0.000620    -0.000897    -0.000720    -0.000659    -0.000734    -0.\n",
+      "> 000720   \n",
       "-------------------------------------------------------------------------------\n",
       "> ---------\n",
       "* p<0.05, ** p<0.01, *** p<0.001\n",
       "\n",
+      ". \n",
       ". \n"
      ]
     }
@@ -1490,12 +1500,13 @@
     "//缩尾\n",
     "winsor2 pct_chg close , cut(1 99)  replace  by(id) label\n",
     "ge lnclose=ln(close)\n",
+    "ge lnSENT_INDEX_R_MA5=ln(SENT_INDEX_R_MA5)\n",
     "\n",
     "//\n",
     "est clear\n",
-    "by id,sort:eststo: qui reg lnclose L(1/5).SENT_INDEX_R_MA5 i.trade_year,r\n",
-    "esttab ,keep(L*.SENT_INDEX_*) ///\n",
-    "not unstack compress nogaps noobs"
+    "by id,sort:eststo: qui reg pct_chg L(1/5).SENT_INDEX_R i.trade_year,r\n",
+    "esttab,keep(L*.SENT_INDEX_*)  stats(N r2_a) ///\n",
+    "not unstack compress nogaps noobs\n"
    ],
    "metadata": {
     "collapsed": false
