实证检验结果

--- a/notebooks/IS-Analyst.ipynb
+++ b/notebooks/IS-Analyst.ipynb
@@ -20,6 +20,31 @@
   },
   {
    "cell_type": "code",
+   "execution_count": 6,
+   "outputs": [
+    {
+     "data": {
+      "text/plain": "['/home/ubuntu/notebooks',\n '/usr/local/miniconda3/envs/Rapids/lib/python39.zip',\n '/usr/local/miniconda3/envs/Rapids/lib/python3.9',\n '/usr/local/miniconda3/envs/Rapids/lib/python3.9/lib-dynload',\n '',\n '/usr/local/miniconda3/envs/Rapids/lib/python3.9/site-packages']"
+     },
+     "execution_count": 6,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "import sys\n",
+    "\n",
+    "# /usr/local/miniconda3/envs/Rapids/bin/python\n",
+    "# /usr/local/stata17/utilities\n",
+    "# np\n",
+    "sys.path"
+   ],
+   "metadata": {
+    "collapsed": false
+   }
+  },
+  {
+   "cell_type": "code",
    "execution_count": 1,
    "outputs": [
     {
@@ -56,7 +81,7 @@
     "sys.path.append('/usr/local/stata17/utilities')\n",
     "\n",
     "# 多核 groupby Apply\n",
-    "from pandarallel import pandarallel\n",
+    "# from pandarallel import pandarallel\n",
     "\n",
     "# 数据库\n",
     "from utils.sql import DB\n",
@@ -65,8 +90,8 @@
     "from loader.findata_loader import Loader\n",
     "\n",
     "# 统计工具\n",
-    "from statsmodels.regression.rolling import RollingOLS  #滚动回归\n",
-    "from statsmodels.regression.linear_model import OLS  #OLS回归\n",
+    "# from statsmodels.regression.rolling import RollingOLS  #滚动回归\n",
+    "# from statsmodels.regression.linear_model import OLS  #OLS回归\n",
     "\n",
     "# Stata\n",
     "from pystata import config  # noqa\n",
@@ -389,6 +414,7 @@
    ],
    "source": [
     "%%stata -d df_analyst -force\n",
+    "/*{*/\n",
     "logout, save(Investor-Sentiment/outputs/Table_Sum) replace: tabstat *_neg total_mv pe_ttm_weight , ///\n",
     "s(N sd mean p50 min max ) f(%12.4f) c(s)"
    ],
