--- a/notebooks/IS-Analyst.ipynb
+++ b/notebooks/IS-Analyst.ipynb
@@ -37,6 +37,7 @@
     "# /usr/local/miniconda3/envs/Rapids/bin/python\n",
     "# /usr/local/stata17/utilities\n",
     "# np\n",
+    "\n",
     "sys.path"
    ],
    "metadata": {
@@ -364,7 +365,10 @@
    "execution_count": 9,
    "outputs": [],
    "source": [
-    "# @formatter:off"
+    "# @formatter:off\n",
+    "# language=SHELL\n",
+    "su bash\n",
+    "s = \"<a>\""
    ],
    "metadata": {
     "collapsed": false
@@ -588,6 +592,7 @@
     "\n",
     "//缩尾\n",
     "winsor2 opt_profit, cut(1 99) by(id) label replace\n",
+    "\n",
     "\n",
     "//变量对数处理\n",
     "foreach var in opt_profit total_mv pe_ttm_weight profit_avg {\n",
