--- a/notebooks/IS-FinMarket.ipynb
+++ b/notebooks/IS-FinMarket.ipynb
@@ -50,10 +50,12 @@
     "# 自行编写的包\n",
     "sys.path.append('/usr/local/stata17/utilities')\n",
     "sys.path.append('/home/ubuntu/notebook/pycharm_projects/Investor-Sentiment')\n",
+    "\n",
     "# Stata\n",
     "from pystata import config\n",
     "\n",
     "config.init('mp')\n",
+    "\n",
     "# ------------------------------数据集路径----------------------------------#\n",
     "# /usr/local/miniconda3/envs/Rapids/bin/python\n",
     "DATASETS_PATH = '/data/DataSets/BW_INDEX_CSMAR/BW_5_CSMAR/'"
@@ -351,9 +353,8 @@
     "    \"\"\"\n",
     "    df = cudf.read_parquet(f'{DATASETS_PATH}QX_IPO.parquet')\n",
     "\n",
-    "    '''\n",
-    "    计算平均首日收益\n",
-    "    '''\n",
+    "    # 计算平均首日收益\n",
+    "\n",
     "    df['DayAvgRR'] = df.groupby(level=['ListedDate'])['ReturnRate'].transform('mean')\n",
     "    df['DayTotalN'] = df.groupby(level=['ListedDate'])['ReturnRate'].transform('count')\n",
     "    df = df.groupby(level=['ListedDate']).first()\n",
@@ -425,7 +426,7 @@
     }
    ],
    "source": [
-    "def merge_bw(is_standard=True) -> pd.DataFrame:\n",
+    "def merge_bw() -> pd.DataFrame:\n",
     "    \"\"\"\n",
     "    合成函数\n",
     "    \"\"\"\n",
@@ -434,18 +435,15 @@
     "    df.index.names = ['trade_date']\n",
     "    df = df.reset_index()\n",
     "\n",
-    "    \"\"\"\n",
-    "    PD和SR只有年份数据\n",
-    "    \"\"\"\n",
+    "    # PD和SR只有年份数据\n",
+    "\n",
     "    df['trade_year'] = (df['trade_date'] // 10000).astype('uint32')\n",
     "    df['trade_month'] = (df['trade_date'] // 100).astype('uint32')\n",
     "    df = df.set_index('trade_year').join(cal_sr().to_pandas(), how='outer').join(cal_pd().to_pandas(), how='outer')\n",
     "    df.index.names = ['trade_year']\n",
     "    df = df.reset_index()\n",
     "\n",
-    "    \"\"\"\n",
-    "    合并股指市场数据\n",
-    "    \"\"\"\n",
+    "    # 合并股指市场数据\n",
     "    df = (\n",
     "            pd.merge(\n",
     "                    df_sindex,\n",
@@ -455,9 +453,7 @@
     "            .query(\"ts_code=='000001.SH'&20100101<=trade_date<=20211231\")  # 000001.SH\n",
     "    )\n",
     "\n",
-    "    \"\"\"\n",
-    "    合并宏观数据\n",
-    "    \"\"\"\n",
+    "    # 合并宏观数据\n",
     "    df = (\n",
     "            pd.merge(\n",
     "                    df.reset_index(),\n",
@@ -466,24 +462,16 @@
     "            )\n",
     "    )\n",
     "\n",
-    "    \"\"\"\n",
-    "    空值处理\n",
-    "    IPO填充0,CEFD用历史数据回填\n",
-    "    \"\"\"\n",
+    "    # 空值处理\n",
+    "    # IPO填充0,CEFD用历史数据回填\n",
+    "\n",
     "    df.loc[:, ['RIPO', 'NIPO']] = df.loc[:, ['RIPO', 'NIPO']].fillna(value=0)\n",
     "    df.loc[:, ['CEFD']] = df.loc[:, ['CEFD']].fillna(method=\"ffill\")\n",
-    "\n",
-    "    \"\"\"\n",
-    "    标准化\n",
-    "    \"\"\"\n",
-    "    if is_standard:\n",
-    "        standard_cols = ['CEFD', 'RIPO', 'NIPO', 'TURN', 'SR', 'lnPD']\n",
-    "        df.loc[:, standard_cols] = (df[standard_cols] - df[standard_cols].mean()) / df[standard_cols].std()\n",
     "\n",
     "    return df\n",
     "\n",
     "\n",
-    "df_pca = merge_bw(is_standard=False)\n",
+    "df_pca = merge_bw()\n",
     "df_pca"
    ],
    "metadata": {
@@ -501,7 +489,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": null,
    "outputs": [],
    "source": [
     "# @formatter:off"
@@ -512,23 +500,28 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": 23,
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
+      "Unknown #command\n",
+      "Unknown #command\n",
+      "Unknown #command\n",
+      "Unknown #command\n",
+      "Unknown #command\n",
+      "Unknown #command\n",
       "\n"
      ]
     }
    ],
    "source": [
     "%%stata -d df_pca -force -qui\n",
-    "\n",
     "/*{*/\n",
-    "\n",
     "//描述性统计\n",
-    "// sum\n",
+    "//sum\n",
+    "\n",
     "//缩尾\n",
     "winsor2 CEFD RIPO NIPO TURN SR lnPD , cut(1 99)  replace\n",
     "\n",
@@ -547,7 +540,7 @@
     "    foreach var in CEFD NIPO RIPO SR TURN lnPD {\n",
     "         ge l`i'_`var'=L`i'.`var'\n",
     "    }\n",
-    "}"
+    "}\n"
    ],
    "metadata": {
     "collapsed": false
@@ -592,9 +585,6 @@
     "\n",
     "\n",
     "//计算相关性\n",
-    "\n",
-    "\n",
-    "//计算相关性\n",
     "est clear\n",
     "forvalues i = 1/5 {\n",
     "     rename(l`i'_BWSENT l`i'_CEFD l`i'_RIPO l`i'_NIPO l`i'_TURN l`i'_SR l`i'_lnPD )  ///\n",
@@ -604,7 +594,7 @@
     "\n",
     "     rename(BWSENT l_CEFD l_RIPO l_NIPO l_TURN l_SR l_lnPD) ///\n",
     "      (l`i'_BWSENT l`i'_CEFD l`i'_RIPO l`i'_NIPO l`i'_TURN l`i'_SR l`i'_lnPD )\n",
-    "}"
+    "}\n"
    ],
    "metadata": {
     "collapsed": false
@@ -884,7 +874,7 @@
     "winsor2 CEFD RIPO NIPO TURN SR lnPD , cut(1 99)  replace\n",
     "\n",
     "// 生成变量\n",
-    "ge n=_n\n",
+    "ge n =_n\n",
     "tsset n\n",
     "ge l1_TURN=L1.TURN\n",
     "\n",
@@ -1176,14 +1166,14 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 72,
+   "execution_count": 16,
    "outputs": [
     {
      "data": {
       "text/plain": "                      pct_chg      close    time  trade_year  SENT_INDEX  \\\nts_code   trade_date                                                       \n000001.SH 20100105     1.1844  3282.1790     1.0        2010   -1.222655   \n          20100106    -0.8520  3254.2150     2.0        2010    0.039612   \n          20100107    -1.8880  3192.7760     3.0        2010   -0.829732   \n          20100108     0.1009  3195.9970     4.0        2010    0.742967   \n          20100111     0.5242  3212.7500     5.0        2010   -1.177301   \n...                       ...        ...     ...         ...         ...   \n399300.SZ 20211227    -0.0411  4919.3238  2912.0        2021    0.597233   \n          20211228     0.7448  4955.9644  2913.0        2021    1.426782   \n          20211229    -1.4626  4883.4804  2914.0        2021    0.202870   \n          20211230     0.7788  4921.5109  2915.0        2021    1.203630   \n          20211231     0.3833  4940.3733  2916.0        2021    0.902235   \n\n                      SENT_INDEX_EX  SENT_INDEX_DEX  SENT_INDEX_R  \\\nts_code   trade_date                                                \n000001.SH 20100105        -0.430662       -0.285413     -1.244143   \n          20100106        -0.489220       -0.286190     -0.035316   \n          20100107        -0.450119       -0.287520     -0.860132   \n          20100108        -0.478187       -0.287617      0.640860   \n          20100111        -0.387898       -0.288697     -1.183935   \n...                             ...             ...           ...   \n399300.SZ 20211227         1.170102        1.302731      0.390557   \n          20211228         1.127746        1.298598      1.186737   \n          20211229         1.149856        1.293518      0.013389   \n          20211230         1.079838        1.288670      0.972127   \n          20211231         1.088991        1.283711      0.720920   \n\n                      SENT_INDEX_R_EX  SENT_INDEX_R_DEX  \nts_code   trade_date                                     \n000001.SH 20100105          -0.331016          0.058454  \n          20100106          -0.412211          0.055876  \n          20100107          -0.378698          0.051982  \n          20100108          -0.421506          0.049377  \n          20100111          -0.327042          0.044932  \n...                               ...               ...  \n399300.SZ 20211227           0.960139          1.050876  \n          20211228           0.909492          1.046500  \n          20211229           0.934144          1.040757  \n          20211230           0.852272          1.035358  \n          20211231           0.862929          1.029868  \n\n[17496 rows x 10 columns]",
       "text/html": "<div>\n<style scoped>\n    .dataframe tbody tr th:only-of-type {\n        vertical-align: middle;\n    }\n\n    .dataframe tbody tr th {\n        vertical-align: top;\n    }\n\n    .dataframe thead th {\n        text-align: right;\n    }\n</style>\n<table border=\"1\" class=\"dataframe\">\n  <thead>\n    <tr style=\"text-align: right;\">\n      <th></th>\n      <th></th>\n      <th>pct_chg</th>\n      <th>close</th>\n      <th>time</th>\n      <th>trade_year</th>\n      <th>SENT_INDEX</th>\n      <th>SENT_INDEX_EX</th>\n      <th>SENT_INDEX_DEX</th>\n      <th>SENT_INDEX_R</th>\n      <th>SENT_INDEX_R_EX</th>\n      <th>SENT_INDEX_R_DEX</th>\n    </tr>\n    <tr>\n      <th>ts_code</th>\n      <th>trade_date</th>\n      <th></th>\n      <th></th>\n      <th></th>\n      <th></th>\n      <th></th>\n      <th></th>\n      <th></th>\n      <th></th>\n      <th></th>\n      <th></th>\n    </tr>\n  </thead>\n  <tbody>\n    <tr>\n      <th rowspan=\"5\" valign=\"top\">000001.SH</th>\n      <th>20100105</th>\n      <td>1.1844</td>\n      <td>3282.1790</td>\n      <td>1.0</td>\n      <td>2010</td>\n      <td>-1.222655</td>\n      <td>-0.430662</td>\n      <td>-0.285413</td>\n      <td>-1.244143</td>\n      <td>-0.331016</td>\n      <td>0.058454</td>\n    </tr>\n    <tr>\n      <th>20100106</th>\n      <td>-0.8520</td>\n      <td>3254.2150</td>\n      <td>2.0</td>\n      <td>2010</td>\n      <td>0.039612</td>\n      <td>-0.489220</td>\n      <td>-0.286190</td>\n      <td>-0.035316</td>\n      <td>-0.412211</td>\n      <td>0.055876</td>\n    </tr>\n    <tr>\n      <th>20100107</th>\n      <td>-1.8880</td>\n      <td>3192.7760</td>\n      <td>3.0</td>\n      <td>2010</td>\n      <td>-0.829732</td>\n      <td>-0.450119</td>\n      <td>-0.287520</td>\n      <td>-0.860132</td>\n      <td>-0.378698</td>\n      <td>0.051982</td>\n    </tr>\n    <tr>\n      <th>20100108</th>\n      <td>0.1009</td>\n      <td>3195.9970</td>\n      <td>4.0</td>\n      <td>2010</td>\n      <td>0.742967</td>\n      <td>-0.478187</td>\n      <td>-0.287617</td>\n      <td>0.640860</td>\n      <td>-0.421506</td>\n      <td>0.049377</td>\n    </tr>\n    <tr>\n      <th>20100111</th>\n      <td>0.5242</td>\n      <td>3212.7500</td>\n      <td>5.0</td>\n      <td>2010</td>\n      <td>-1.177301</td>\n      <td>-0.387898</td>\n      <td>-0.288697</td>\n      <td>-1.183935</td>\n      <td>-0.327042</td>\n      <td>0.044932</td>\n    </tr>\n    <tr>\n      <th>...</th>\n      <th>...</th>\n      <td>...</td>\n      <td>...</td>\n      <td>...</td>\n      <td>...</td>\n      <td>...</td>\n      <td>...</td>\n      <td>...</td>\n      <td>...</td>\n      <td>...</td>\n      <td>...</td>\n    </tr>\n    <tr>\n      <th rowspan=\"5\" valign=\"top\">399300.SZ</th>\n      <th>20211227</th>\n      <td>-0.0411</td>\n      <td>4919.3238</td>\n      <td>2912.0</td>\n      <td>2021</td>\n      <td>0.597233</td>\n      <td>1.170102</td>\n      <td>1.302731</td>\n      <td>0.390557</td>\n      <td>0.960139</td>\n      <td>1.050876</td>\n    </tr>\n    <tr>\n      <th>20211228</th>\n      <td>0.7448</td>\n      <td>4955.9644</td>\n      <td>2913.0</td>\n      <td>2021</td>\n      <td>1.426782</td>\n      <td>1.127746</td>\n      <td>1.298598</td>\n      <td>1.186737</td>\n      <td>0.909492</td>\n      <td>1.046500</td>\n    </tr>\n    <tr>\n      <th>20211229</th>\n      <td>-1.4626</td>\n      <td>4883.4804</td>\n      <td>2914.0</td>\n      <td>2021</td>\n      <td>0.202870</td>\n      <td>1.149856</td>\n      <td>1.293518</td>\n      <td>0.013389</td>\n      <td>0.934144</td>\n      <td>1.040757</td>\n    </tr>\n    <tr>\n      <th>20211230</th>\n      <td>0.7788</td>\n      <td>4921.5109</td>\n      <td>2915.0</td>\n      <td>2021</td>\n      <td>1.203630</td>\n      <td>1.079838</td>\n      <td>1.288670</td>\n      <td>0.972127</td>\n      <td>0.852272</td>\n      <td>1.035358</td>\n    </tr>\n    <tr>\n      <th>20211231</th>\n      <td>0.3833</td>\n      <td>4940.3733</td>\n      <td>2916.0</td>\n      <td>2021</td>\n      <td>0.902235</td>\n      <td>1.088991</td>\n      <td>1.283711</td>\n      <td>0.720920</td>\n      <td>0.862929</td>\n      <td>1.029868</td>\n    </tr>\n  </tbody>\n</table>\n<p>17496 rows × 10 columns</p>\n</div>"
      },
-     "execution_count": 72,
+     "execution_count": 16,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1216,7 +1206,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 68,
+   "execution_count": 17,
    "outputs": [
     {
      "name": "stdout",
@@ -1326,7 +1316,7 @@
    "source": [
     "%%stata -d df_sum -force\n",
     "\n",
-    "// 在股票代码中进行循环\n",
+    "// 在股票代码中进行循环(存档)\n",
     "//local code_list = \"300.SH s\"\n",
     "//foreach code of local code_list{\n",
     "//    display \"`code'\"\n",
@@ -1337,8 +1327,6 @@
     "ge dt = date(trade_date, \"YMD\")\n",
     "format dt %tdCCYYNNDD\n",
     "xtset id dt\n",
-    "\n",
-    "//\n",
     "\n",
     "// 按照组别循环处理(推荐)\n",
     "egen group_code = group(ts_code)\n",
@@ -1363,7 +1351,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 19,
+   "execution_count": 18,
    "outputs": [],
    "source": [
     "# %%stata -gw 12in -gh 6in -qui\n",
@@ -1386,7 +1374,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 154,
+   "execution_count": 19,
    "outputs": [
     {
      "name": "stdout",
@@ -1417,12 +1405,17 @@
       "\n",
       ". foreach var of local varlist {\n",
       "  2.     ge lnchg_`var' = ln(`var'/L.`var')\n",
-      "  3.     qui norm lnchg_`var' `var', method(zee)\n",
-      "  4. }\n",
+      "  3.     ge ln_`var' = ln(`var')\n",
+      "  4.     qui norm lnchg_`var' ln_`var' `var', method(zee)\n",
+      "  5. }\n",
       "(66 missing values generated)\n",
+      "(11,304 missing values generated)\n",
       "(432 missing values generated)\n",
+      "(10,302 missing values generated)\n",
       "(24 missing values generated)\n",
+      "(12,054 missing values generated)\n",
       "(252 missing values generated)\n",
+      "(11,580 missing values generated)\n",
       "(6 missing values generated)\n",
       "\n",
       ". ge s_zee_lnchg_close=zee_lnchg_close*zee_lnchg_close\n",
@@ -1432,8 +1425,8 @@
       ". // 回归分析\n",
       ". est clear\n",
       "\n",
-      ". by id, sort : eststo:  qui reg zee_lnchg_close L.zee_SENT_INDEX_R_DEX L(1/5).\n",
-      "> zee_lnchg_close L(1/5).s_zee_lnchg_close  i.trade_year ,r\n",
+      ". by id, sort : eststo:  qui reg ln_close L.zee_SENT_INDEX_R_DEX L(1/5).zee_lnc\n",
+      "> hg_close L(1/5).s_zee_lnchg_close  i.trade_year ,r\n",
       "\n",
       "-------------------------------------------------------------------------------\n",
       "-> 000001.SH\n",
@@ -1468,20 +1461,20 @@
       "> ---------\n",
       "                 (1)          (2)          (3)          (4)          (5)       \n",
       ">    (6)   \n",
-      "           zee_lnc~e    zee_lnc~e    zee_lnc~e    zee_lnc~e    zee_lnc~e    zee\n",
-      "> _lnc~e   \n",
+      "            ln_close     ln_close     ln_close     ln_close     ln_close     ln\n",
+      "> _close   \n",
       "-------------------------------------------------------------------------------\n",
       "> ---------\n",
-      "L.zee_SE..  -0.00135      0.00587     0.000689      -0.0216      -0.0233     0.\n",
-      "> 000689   \n",
-      "             (-0.03)       (0.13)       (0.01)      (-0.37)      (-0.40)       \n",
-      "> (0.01)   \n",
+      "L.zee_SE..    0.0927***    0.0991***     0.114***     0.102***     0.131***    \n",
+      ">  0.114***\n",
+      "             (36.71)      (32.69)      (37.94)      (31.60)      (38.28)      (\n",
+      "> 37.94)   \n",
       "-------------------------------------------------------------------------------\n",
       "> ---------\n",
       "N               2910         2910         2910         2910         2910       \n",
       ">   2910   \n",
-      "r2_a        0.000659      0.00722      0.00382      0.00363    0.00000471      \n",
-      "> 0.00382   \n",
+      "r2_a           0.871        0.917        0.913        0.885        0.840       \n",
+      ">  0.913   \n",
       "-------------------------------------------------------------------------------\n",
       "> ---------\n",
       "t statistics in parentheses\n",
@@ -1493,7 +1486,7 @@
    ],
    "source": [
     "%%stata -d df_sum -force\n",
-    "#\n",
+    "\n",
     "// 模型设定\n",
     "encode ts_code,gen(id)\n",
     "xtset id time\n",
@@ -1501,19 +1494,19 @@
     "// 缩尾\n",
     "winsor2 pct_chg close , cut(1 99)  replace  by(id) label\n",
     "\n",
-    "\n",
-    "//变量对数差分处理\n",
-    "// 标准化回归变量\n",
+    "//变量对数处理\n",
     "local varlist \"SENT_INDEX_R_DEX SENT_INDEX_R_EX SENT_INDEX_DEX SENT_INDEX_EX close\"\n",
     "foreach var of local varlist {\n",
     "    ge lnchg_`var' = ln(`var'/L.`var')\n",
-    "    qui norm lnchg_`var' `var', method(zee)\n",
+    "    ge ln_`var' = ln(`var')\n",
+    "    // 标准化回归变量\n",
+    "    qui norm lnchg_`var' ln_`var' `var', method(zee)\n",
     "}\n",
     "ge s_zee_lnchg_close=zee_lnchg_close*zee_lnchg_close\n",
     "\n",
     "// 回归分析\n",
     "est clear\n",
-    "by id, sort : eststo:  qui reg zee_lnchg_close L.zee_SENT_INDEX_R_DEX L(1/5).zee_lnchg_close L(1/5).s_zee_lnchg_close  i.trade_year ,r\n",
+    "by id, sort : eststo:  qui reg ln_close L.zee_SENT_INDEX_R_DEX L(1/5).zee_lnchg_close L(1/5).s_zee_lnchg_close  i.trade_year ,r\n",
     "\n",
     "// 输出\n",
     "esttab,keep(*SENT_INDEX_*)  stats(N r2_a)  ///\n",
@@ -1525,7 +1518,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 19,
    "outputs": [],
    "source": [],
    "metadata": {
